adição de hover no menu, nos recursos e adição de links no index

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -89,7 +89,7 @@
                             </a>
                             <!-- <p>Site em formato de quizz como uma atividade interativa para o aluno aprimorar seus conhecimentos sobre as propriedadas das funções trigonométricas</p> -->
                             <p>
-                                O site interativo em formato de quiz foi projetado para proporcionar uma atividade envolvente que permitirá aos alunos aprimorar seus conhecimentos sobre as propriedades das funções trigonométricas. Esta plataforma oferece uma abordagem dinâmica e prática, permitindo que os alunos testem e solidifiquem sua compreensão dos conceitos trigonométricos de forma lúdica. 
+                                O site interativo em formato de quiz foi projetado para proporcionar uma atividade envolvente que permitirá aos alunos aprimorar seus conhecimentos sobre as propriedades das funções trigonométricas. Esta plataforma oferece uma abordagem dinâmica e prática, permitindo que os alunos testem e solidifiquem sua compreensão dos conceitos trigonométricos. 
                             </p>
                     
                         </div>
@@ -110,7 +110,7 @@
                 </div>
             </section>
 
-            <hr style="height: 0.5rem; margin-bottom: 10rem ;">
+            <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);">
 
             <section id="calc-func-uma-var">
                 <h2>Cálculo de Funções de Uma Variável</h2>
@@ -140,7 +140,7 @@
 
             </section>
 
-            <hr style="height: 0.5rem; margin-bottom: 10rem ;">
+            <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);">
 
 
             <section id="calc-func-varias-var">
@@ -192,7 +192,7 @@
                 </div>
 
             </section>
-            <hr style="height: 0.5rem; margin-bottom: 10rem ;">
+            <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);">
 
             <section id="edo">
                 <h2>Equações Diferenciais Ordinárias</h2>
