Alterações do gabriel desfeitas e logo reposicionado

--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -34,8 +34,8 @@
             <section id="manim">
                 <div class="recurso-container">
                     <h3>Recursos Computacionais com Python</h3>
-                    <h5>Monitor: Gabriel Domingues</h5>
-                    <h6>Data: 2023</h6>
+                    <!-- <h5>Monitor: Gabriel Domingues</h5> -->
+                    <!-- <h6>Data: 2023</h6> -->
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
                             <a href="">
