--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -65,8 +65,8 @@
                 <hr>
                 <div class="recurso-container">
                     <h3>Propriedades de Funções Trigonométricas</h3>
-                    <h5>Monitor: Gabriel Domingues</h5>
-                    <h6>Ano: 2023</h6>
+                    <!-- <h5>Monitor: Gabriel Domingues</h5> -->
+                    <!-- <h6>Ano: 2023</h6> -->
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem -->
 
@@ -74,9 +74,9 @@
                                 <img src="../assets/img/funcao-inversa-seno.png" alt="Função Inversa do Seno">
                                 <img src="../assets/icons/youtube.png" alt="logo do youtube" class="logo">
                             </a>                      
-                            <!-- <p>Playlist no youtube dos vídeos que demonstram as propriedadas das funções trigonométricas</p> -->
+                            <p>Playlist no youtube dos vídeos que demonstram as propriedadas das funções trigonométricas</p>
                             <p>
-                                A playlist disponibilizada no YouTube é composta por vídeos que detalham de maneira visual e informativa as propriedades fascinantes das funções trigonométricas. Cada vídeo é cuidadosamente projetado para oferecer uma compreensão clara e prática desses conceitos matemáticos essenciais.
+                                <!-- A playlist disponibilizada no YouTube é composta por vídeos que detalham de maneira visual e informativa as propriedades fascinantes das funções trigonométricas. Cada vídeo é cuidadosamente projetado para oferecer uma compreensão clara e prática desses conceitos matemáticos essenciais. -->
                             </p>
                         </div>
                     </div>
@@ -87,9 +87,9 @@
                                 <img src="../assets/img/site-ficha-trig.png" alt="Site Fichas Trigonométricas">
                                 <img src="../assets/icons/site-icone.png" alt="logo de site" class="logo">
                             </a>
-                            <!-- <p>Site em formato de quizz como uma atividade interativa para o aluno aprimorar seus conhecimentos sobre as propriedadas das funções trigonométricas</p> -->
+                            <p>Site em formato de quizz como uma atividade interativa para o aluno aprimorar seus conhecimentos sobre as propriedadas das funções trigonométricas</p>
                             <p>
-                                O site interativo em formato de quiz foi projetado para proporcionar uma atividade envolvente que permitirá aos alunos aprimorar seus conhecimentos sobre as propriedades das funções trigonométricas. Esta plataforma oferece uma abordagem dinâmica e prática, permitindo que os alunos testem e solidifiquem sua compreensão dos conceitos trigonométricos. 
+                                <!-- O site interativo em formato de quiz foi projetado para proporcionar uma atividade envolvente que permitirá aos alunos aprimorar seus conhecimentos sobre as propriedades das funções trigonométricas. Esta plataforma oferece uma abordagem dinâmica e prática, permitindo que os alunos testem e solidifiquem sua compreensão dos conceitos trigonométricos.  -->
                             </p>
                     
                         </div>
@@ -100,9 +100,9 @@
                                 <img src="../assets/img/img-tvm.png" alt="Video do instagram">
                                 <img src="../assets/icons/instagram.png" alt="logo do insta" class="logo">
                             </a>        
-                            <!-- <p>Conteúdo para o Instagram sobre Teorema de Rolle e Teorema do Valor Médio</p> -->
+                            <p>Conteúdo para o Instagram sobre Teorema de Rolle e Teorema do Valor Médio</p>
                             <p>
-                                Além disso, também foi desenolvido conteúdo informativo sobre o Teorema de Rolle e o Teorema do Valor Médio para ser compartilhado no Instagram. Nosso objetivo é facilitar o acesso ao conhecimento matemático, proporcionando oportunidade para os alunos aprenderem mesmo enquanto exploram suas redes sociais.
+                                <!-- Além disso, também foi desenolvido conteúdo informativo sobre o Teorema de Rolle e o Teorema do Valor Médio para ser compartilhado no Instagram. Nosso objetivo é facilitar o acesso ao conhecimento matemático, proporcionando oportunidade para os alunos aprenderem mesmo enquanto exploram suas redes sociais. -->
                             </p>
                           
                         </div>
