Adicionado os livros de Geogebra 3D

--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -54,16 +54,27 @@
             <section id="geog-3d">
                 <div class="recurso-container">
                     <h3>Geogebra 3D (2020-2021)</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <h5>Monitores:Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
+                    <h5>Equipe de orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
                             <a href="">
-                                <img src="../assets/img/img-padrao.bmp" alt="Geogebra 3D">
+                                <img src="../assets/img/calc-varias-var.png" alt="Geogebra 3D">
                             </a>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti eligendi laborum quae enim harum voluptatem commodi, eos illo alias eum, qui maiores a error doloribus molestias labore eveniet porro expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus pariatur iusto eius debitis! Numquam possimus, harum perspiciatis nihil fuga, culpa placeat vitae cumque natus at itaque sapiente esse ipsam cum!</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque vero, temporibus minus tempora officia omnis cum autem dignissimos tempore veritatis expedita harum, asperiores, culpa odit sapiente atque laborum veniam excepturi.</p>
                         </div>
+                        
+                    </div>
+                    <div class="recurso-descricao">
+                        <div> <!-- div importante para manter o float na imagem-->
+                            <a href="">
+                                <img src="../assets/img/calc-varias-var-v2.png" alt="Geogebra 3D">
+                            </a>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti eligendi laborum quae enim harum voluptatem commodi, eos illo alias eum, qui maiores a error doloribus molestias labore eveniet porro expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus pariatur iusto eius debitis! Numquam possimus, harum perspiciatis nihil fuga, culpa placeat vitae cumque natus at itaque sapiente esse ipsam cum!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque vero, temporibus minus tempora officia omnis cum autem dignissimos tempore veritatis expedita harum, asperiores, culpa odit sapiente atque laborum veniam excepturi.</p>
+                        </div>
+                        
                     </div>
                 </div>
             </section>
