--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -36,12 +36,13 @@
             <section id="calc-geogebra-v1">
                 <div class="recurso-container">
                     <h3>Cálculo com Geobebra 3D vol. I</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <h5>Monitores:Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
+                    <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
+                    <h6>Data: 2020</h6>
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
-                            <a href="">
-                                <img src="../assets/img/img-padrao.bmp" alt="Cálculo com Geogebra 3D vol.I">
+                            <a href="https://www.geogebra.org/m/hzvsftdf">
+                                <img src="../assets/img/calc-varias-var-v1.png" alt="Cálculo com Geogebra 3D vol.I">
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quas accusantium, explicabo necessitatibus inventore sunt veniam vel corporis ab nam! Sint, molestias dolor impedit quidem id asperiores possimus provident aliquid. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis laborum molestiae, debitis laudantium sunt enim excepturi reprehenderit! Minus eveniet nam repellendus quibusdam. Eaque quod deserunt incidunt nisi obcaecati non molestias?</p>
@@ -55,12 +56,13 @@
                 <div class="recurso-container">
 
                     <h3>Cálculo com Geobebra 3D vol. II</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <h5>Monitores:Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
+                    <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
+                    <h6>Data: 2020</h6>
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
-                            <a href="">
-                                <img src="../assets/img/img-padrao.bmp" alt="Cálculo com Geogebra 3D vol.II">
+                            <a href="https://www.geogebra.org/m/jke7hpfs">
+                                <img src="../assets/img/calc-varias-var-v2.png" alt="Cálculo com Geogebra 3D vol.II">
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aspernatur provident omnis exercitationem ullam repellat cupiditate enim inventore dolores assumenda et praesentium, quos beatae? Alias laboriosam nostrum quidem suscipit omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quae molestiae. Quidem ad sapiente expedita iusto magnam iste eligendi aperiam, optio perspiciatis repudiandae non adipisci possimus consequuntur voluptatem. Aperiam, distinctio.</p>
@@ -74,12 +76,13 @@
                 <div class="recurso-container">
 
                     <h3>Geometria Analítica com Geogebra</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <h5>Monitores:Ruan Soares Risso Possas, João Victor da Silvares, Gabriel Felice de Freitas Santos, Raphael Odalvo, João Pedro Teixeira, Maria Luiza Américo, Alan da Silva Gomes </h5>
+                    <h5>Orientadores: Begoña Alarcón, Jones Colombo, Leandro Merlo, Leonardo Silvares e Pablo Barrientos.</h5>
+                    <h6>Data: 2021</h6>
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
-                            <a href="">
-                                <img src="../assets/img/img-padrao.bmp" alt="Geometria Analítica com Geogebra">
+                            <a href="https://www.geogebra.org/m/wtmkn9nv">
+                                <img src="../assets/img/ga-cv.png" alt="Geometria Analítica com Geogebra">
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis iste dignissimos veritatis, ducimus modi quis accusantium asperiores minima, eos blanditiis error architecto iusto itaque assumenda cupiditate. Quibusdam harum optio repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus veniam labore excepturi id molestiae dicta facilis, ab harum laborum eveniet accusantium doloribus consectetur, quaerat reiciendis tempora quidem exercitationem sint!</p>
@@ -115,7 +118,7 @@
                     <h6>Data: --/----</h6>
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
-                            <a href="">
+                            <a href="http://www.gma.uff.br/calculo1a/">
                                 <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 1A (em andamento)">
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
@@ -148,12 +151,12 @@
             <section id="site-calc-3a">
                 <div class="recurso-container">
 
-                    <h3>Site Cálculo 3A (em andamento)</h3>
+                    <h3>Site Cálculo 3A</h3>
                     <h5>Monitores:</h5>
                     <h6>Data: --/----</h6>
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
-                            <a href="">
+                            <a href="http://www.gma.uff.br/calculo3a/">
                                 <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 3A (em andamento)">
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
